added contact us link

--- a/about_us.html
+++ b/about_us.html
@@ -97,6 +97,11 @@
                         <p>Be part of our mission to collect 1 million thank you pictures. We strongly believe that everyone want to be contribute what they can to bring happiness in this world and this is your chance to make the different in the community and bring smile to all the frontline workers around the world. Simply take a picture of you or your family holding sign saying “thank you”.</p>
                         <p><b>Phase 1:</b> We are releasing 10,000 spots to upload your image and as we fill out the spot we will be keep opening more until we fill up 1,000,000.</p>
                     </div> <!-- end of text container -->
+
+                    <div class="text-container">
+                        <h3>Contact us</h3>
+                        <p>You can reach us at millionthankyouorg@gmail.com</p>
+                    </div> <!-- end of text container -->
                 </div> <!-- end of col-->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
